introduces and migrates to the StateURI subclasses to support Arc and Manifest state URIs.
The StateURI subclasses provide builder interfaces for creating paths and identifiers safely.

A StateURI instance can be rendered directly into a valid URI instance, or into a (rfc6570) URI Template.

The class also can parse a URI or template back into an ArcUI or ManifestURI instance.

JSON de/serialization is fully supported when passing a properties JSON to a workload process.